--- a/examples/demo_on_colab.ipynb
+++ b/examples/demo_on_colab.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "!pip install chainercv rasterio\n",
-    "git clone https://github.com/oyam/PanNet-landsat"
+    "!git clone https://github.com/oyam/PanNet-landsat"
    ]
   },
   {
